Fix Code Issues (#34)